--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <footer class="footer main-grid">
         <div class="footer-main">
-            <img class="footer-logo" src="/img/logo.png">
+            <img class="footer-logo" src="../img/logo.png">
             <p class="footer-text">Two brothers from Chicago that are just trying to pay back their debt by helping others with their SEO, SEM, and Content Marketing needs.</p>
             <p class="footer-fineprint">© Jake&Elwood 2019</p>
         </div>
