--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@
     <script src="https://kit.fontawesome.com/f511cb2312.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- <header>
-        <div class=" header main-grid">
+    <header  class=" header main-grid">
+        <div class=" header-content">
             <a class="logo-link"> <img class="logo" src="img/logo.png" alt=""> </a>
-            <nav>
+            <nav class="nav"> 
+                <button aria-label="close navigation" class="close-nav-btn"> &times; </button>
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="#">home</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">about us</a></li>
                     <li class="nav-item"><a class="nav-link" href="#">contact</a></li>
                 </ul>
             </nav>
-        </div> -->
+        </div>
     </header>
 
     <main>
