--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class=" header-content">
             <a class="logo-link"> <img class="logo" src="img/logo.png" alt=""> </a>
             <button aria-label="open navigation" class="open-nav-btn"> &#9776; </button>  
-            <nav class="nav nav-open"> 
+            <nav class="nav"> 
                 <button aria-label="close navigation" class="close-nav-btn"> &times; </button>
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="#">home</a></li>
