--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script src="https://kit.fontawesome.com/f511cb2312.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <header  class=" header main-grid">
+    <header  class=" header header-home main-grid">
         <div class=" header-content">
             <a class="logo-link"> <img class="logo" src="img/logo.png" alt=""> </a>
             <button aria-label="open navigation" class="open-nav-btn"> &#9776; </button>  
