add close and open btn to navigation

--- a/index-k.html
+++ b/index-k.html
@@ -11,8 +11,8 @@
     <header class="header-home main-grid">
         <div class="header-content">
             <a class="logo-link" href="#"> <img class="logo" src="img/logo.png"></a>
-            <button aria-label="open navigation" class="open-nav-btn"> &#9776; </button>  
-            <nav class="nav">
+            <button aria-label="open navigation" class="open-nav-btn"> 	 &#9776;</button>  
+            <nav class="nav nav-open ">
                 <button aria-label="close navigation"  class="close-nav-btn"> &times; </button>
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="#">home</a></li>
