--- a/about.html
+++ b/about.html
@@ -24,10 +24,9 @@
     </header>
 
     <main class="about main-grid">
-        <div class="page-title">
-            <h1>About us.</h1>
-            <p>We’re two brothers from Chicago. We can help you with SEO, SEM, content marketing and whatever else.</p>    
-        </div>
+        <h1 class="page-title">About us.</h1>
+        <p class="page-subtitle">We’re two brothers from Chicago. We can help you with SEO, SEM, content marketing and whatever else.</p>    
+        
         <img class="page-image" src="/img/about-me.jpg" alt="a man wearing goggles">
         
         <div class="main-text">
