--- a/index-k.html
+++ b/index-k.html
@@ -15,9 +15,9 @@
             <nav class="nav ">
                 <button aria-label="close navigation"  class="close-nav-btn"> &times; </button>
                 <ul class="nav-list">
-                    <li class="nav-item"><a class="nav-link" href="#">home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">about us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="index-k.html">home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
                 </ul>
             </nav>    
         </div>
