--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="#">contact</a></li>
+                    <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
                 </ul>
             </nav>
         </div>
