contact page css

--- a/contact.html
+++ b/contact.html
@@ -23,15 +23,18 @@
         </div>
     </header>
 
-    <main class="about main-grid">
+    <main class="contact main-grid">
         <h1 class="page-title">Contact.</h1>
         <p class="page-subtitle">Let us know how we can help you need and we’ll drive over to your place in our Bluesmobile the following day to discuss the deal.</p>    
         
-        <img class="page-image" src="/img/contact.jpg" alt="several mail boxes near each others">
-        <div class="secondary-text">
-            <h2 class="section-title">Getting in touch with us </h2>
-            <p>You can either use the form or send us an email. I'll get back in touch with you as soon as possible!</p>
+        <div class="left-column">
+            <img class="page-image" src="/img/contact.jpg" alt="several mail boxes near each others">
+            <div class="secondary-text">
+                <h2 class="section-title">Getting in touch with us </h2>
+                <p>You can either use the form or <a class="send-email" href="#">send us an email</a>. I'll get back in touch with you as soon as possible!</p>
+            </div>
         </div>
+
 
         <div class="main-text">
             <form action="/action_page.php">
