fixe some loose ends

--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
-                    <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
+                    <li class="nav-item current"><a class="nav-link"  href="contact.html">contact</a></li>
                 </ul>
             </nav>
         </div>
@@ -37,13 +37,13 @@
 
 
         <div class="main-text">
-            <form action="/action_page.php">
-                <label for="fname">First name</label>
-                <input type="text" id="fname">
-                <label for="email">Email</label>
-                <input type="text" id="email" >
-                <label for="message">Message</label>
-                <textarea id="message"></textarea>
+            <form class="form" action="/action_page.php">
+                <label class="fname-label" for="fname">First name</label>
+                <input  class="fname-input" type="text" id="fname">
+                <label  class="email-label" for="email">Email</label>
+                <input  class="email-input" type="text" id="email" >
+                <label  class="message-label" for="message">Message</label>
+                <textarea  class="message-textarea" id="message"></textarea>
                 <button class="btn submit-btn">send</button>
               </form> 
         </div>
