--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
                 <button aria-label="close navigation" class="close-nav-btn"> &times; </button>
                 <ul class="nav-list">
                     <li class="nav-item"><a class="nav-link" href="index.html">home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="about.html">about us</a></li>
+                    <li class="nav-item current"><a class="nav-link" href="about.html">about us</a></li>
                     <li class="nav-item"><a class="nav-link" href="contact.html">contact</a></li>
                 </ul>
             </nav>
