--- a/index.html
+++ b/index.html
@@ -11,8 +11,11 @@
 <body>
     <header  class="header header-home  main-grid">
         <div class="header-content">
-            <a href="index.html"><img class="logo-image" src="img/neutrovis_logo.png" alt=""></a>
-            <button aria-label="open navigation" class="open-nav">&#9776;</button>
+            <a href="index.html">
+                <img class="logo-image" src="img/neutrovis_logo.png" alt="">
+            </a>
+            <button aria-label="open navigation" class="open-nav"> &#9776;</button>
+
             <!-- <nav>
                 <ul>
                     <li class="list-item"><a href="index.html">home</a></li>
@@ -24,6 +27,8 @@
     </header>
 
     <main>
+        <img src="/img/neutrovis_bg.png" class="hero-background">
+       
         <section class="hero main-grid">
             <h1 class="hero-title">Embrace a brand new year in the new normal</h1>
             <p class="hero-subtitle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, ipsam nobis aut architecto incidunt nisi voluptate totam odio delectus quasi.</p>
