--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header  class="header header-home  main-grid">
         <div class="header-content">
             <a href="index.html">
-                <img class="logo-image" src="img/neutrovis_logo.png" alt="">
+                <img class="logo-image" src="img/logo.png" alt="">
             </a>
             <button aria-label="open navigation" class="open-nav"> &#9776;</button>
 
@@ -26,35 +26,33 @@
         </div>
     </header>
 
-    <main>
-        <img src="/img/neutrovis_bg.png" class="hero-background">
-       
+    <main>      
         <section class="hero main-grid">
-            <h1 class="hero-title">Embrace a brand new year in the new normal</h1>
-            <p class="hero-subtitle">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Pariatur, ipsam nobis aut architecto incidunt nisi voluptate totam odio delectus quasi.</p>
+            <h1 class="hero-title">you’ve got ideas. we protect them.</h1>
+            <p class="hero-subtitle"> The legal system can intimidate and overwhelm anyone. We're here to help find the answers and create the solutions you need. Don't let yourself get buried in details. Contact us instead.</p>
             <button class="btn btn-primary"><a href="contact.html">contact us</a></button>
         </section>
 
         <section class="info main-grid">
             <div class="col">
-                <h2 class="section-title">our brand</h2>
-                <p class="section-sub">NEUTROVIS is a hygience and cleaning brand with extra protective and anti bacterial solution. </p>
+                <h2 class="section-title">We deliver trust and value</h2>
+                <p class="section-sub">We guarantee realistic, honest advice that achieves results. </p>
             </div>
             <div class="col">
-                <h2 class="section-title">our belief</h2>
-                <p class="section-sub">NEUTROVIS believes science and technology should not only play a role in environmental protection, but also neutralized the surrounding to made a safe environment.</p>
+                <h2 class="section-title">We are experienced</h2>
+                <p class="section-sub">Our extraordinarily lawyers, with their local and international expertise and language skills, belong to the recognised leaders in their specialised areas of law.</p>
             </div>
             <div class="col">
-                <h2 class="section-title">our mission</h2>
-                <p class="section-sub">NEUTROVIS is a outdoor companion and environment friendly brand for everyone without any worries about the excess chemical reaction of the products that caused allergic.</p>
+                <h2 class="section-title">We are agile and responsive</h2>
+                <p class="section-sub">We focus on being a responsive arm that our clients can lean on to relieve the pressure valve.</p>
             </div>
         </section>
     </main>
 
     <footer class="footer main-grid">
         <div class="footer-main">
-            <img src="/img/neutrovis_logo.png" alt="" class="footer-logo">
-            <p class="footer-text"></p>
+            <img src="/img/logo.png" alt="" class="footer-logo">
+            <p class="footer-text">THB CONSULTING is a boutique law firm specializing in intellectual property law in Vietnam. We have experienced advocates & solicitors working day in and day out providing sound legal advice. </p>
             <p class="footer-fineprint"></p>
         </div>
         <div class="social-list">
