--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
     <main>      
         <section class="hero main-grid">
-            <h1 class="hero-title">you’ve got ideas. we protect them.</h1>
+            <h1 class="hero-title">You’ve got ideas. We protect them.</h1>
             <p class="hero-subtitle"> The legal system can intimidate and overwhelm anyone. We're here to help find the answers and create the solutions you need. Don't let yourself get buried in details. Contact us instead.</p>
-            <button class="btn btn-primary"><a href="contact.html">contact us</a></button>
+            <a class="cta-link" href="contact.html">Receive Consultation</a>
         </section>
 
         <section class="info main-grid">
