building HTML expertises and client talk sections

--- a/index.html
+++ b/index.html
@@ -33,20 +33,90 @@
             <a class="cta-link" href="contact.html">Receive Consultation</a>
         </section>
 
-        <section class="info main-grid">
-            <div class="col">
-                <h2 class="section-title">We deliver trust and value</h2>
-                <p class="section-sub">We guarantee realistic, honest advice that achieves results. </p>
+        <section class="expertises main-grid">
+            <div class="col-left">
+                <h2 class="section-title">Our expertises</h2>
+                <p class="section-subtitle">We has advised and represented many foreign multi-national corporations, key industry players in Vietnam and prominent individuals. </br>
+                We prides ourselves as a professional firm that provides top-notch legal advice and excellent service. It strives to uphold its tagline, "Legal Solutions Made Simple" to all its clients.</p>
             </div>
-            <div class="col">
-                <h2 class="section-title">We are experienced</h2>
-                <p class="section-sub">Our extraordinarily lawyers, with their local and international expertise and language skills, belong to the recognised leaders in their specialised areas of law.</p>
+
+            <div class="col-right">
+                <ul class="expertises-list">
+                    <li class="expertises-item">
+                        <h3 class="expertise">protect</h3>
+                        <p>your IP, data and privacy</p>
+                    </li>
+                    <li class="expertises-item">
+                        <h3 class="expertise">respond</h3>
+                        <p>to an infringement claim</p>
+                    </li>
+                    <li class="expertises-item">
+                        <h3 class="expertise">commercialize</h3>
+                        <p>your IP</p>
+                    </li>
+                </ul>
+                <button><a href="contact.html">receive consultation</a></button>
             </div>
-            <div class="col">
-                <h2 class="section-title">We are agile and responsive</h2>
-                <p class="section-sub">We focus on being a responsive arm that our clients can lean on to relieve the pressure valve.</p>
-            </div>
+
         </section>
+
+        <section class="client-choose-us main-grid">
+            <div class="col-left">
+                <h2 class="section-title">Why clients choose us</h2>
+                <p class="section-subtitle">We know clients have got a lot of options to choose from. Why they chose THB Consulting?</p>
+                <ol class="reasons-list">
+                    <li class="reason-item">
+                        <h3 class="reason">We deliver trust and value</h3>
+                        <p>We guarantee realistic, honest advice that achieves results. </p>
+                    </li>
+                    <li class="reason-item">
+                        <h3 class="reason">We are agile and responsive</h3>
+                        <p>We focus on being a responsive arm that our clients can lean on to relieve the pressure valve.</p>
+                    </li>
+                    <li class="reason-item">
+                        <h3 class="reason">We are experienced</h3>
+                        <p>Our extraordinarily lawyers, with their local and international expertise and language skills, belong to the recognised leaders in their specialised areas of law.</p>
+                    </li>
+                    <li class="reason-item">
+                        <h3 class="reason">We are solution-focused</h3>
+                        <p>We focus on being a responsive arm that our clients can lean on to relieve the pressure valve.</p>
+                    </li>
+                </ol>
+            </div>
+            <div class="col-right"><img src="img/expertise bg.jpg" alt="a happy client"></div>
+        </section>
+
+        <section class="clients-talk">
+            <h2 class="section-title">Clients talk about us</h2>
+
+            <div class="client-one">
+                <div class="client-title">
+                    <img class="client-image" src="" alt="">
+                    <div class="client-info">
+                        <p class="client-name"MEGHAN DENOYE ></p>
+                        <p class="client-job">Independent Inventor</p>
+                    </div>
+                </div>
+                <p class="client-review">I've never dealt with any patent attorney that brings more to the table than Patrick.  I do less work because he gets it. He gets the work, the project, the scope, and the commercial realities. He brings an invaluable perspective to our intellectual capital strategy and he is an pleasure to work with.</p>   
+            </div>
+
+            <div class="client-two">
+                <div class="client-title">
+                    <img class="client-image" src="" alt="">
+                    <div class="client-info">
+                        <p class="client-name"MEGHAN DENOYE ></p>
+                        <p class="client-job">Independent Inventor</p>
+                    </div>
+                </div>
+                <p class="client-review">I've never dealt with any patent attorney that brings more to the table than Patrick.  I do less work because he gets it. He gets the work, the project, the scope, and the commercial realities. He brings an invaluable perspective to our intellectual capital strategy and he is an pleasure to work with.</p>   
+            </div>
+
+            <a href="#">more reviews</a>
+
+        </section>
+
+        
+
     </main>
 
     <footer class="footer main-grid">
