--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
         </section>
 
         <section class="expertises main-grid">
-            <div class="col-left">
+            <div class="col-left top-content">
                 <h2 class="section-title">Our expertises</h2>
                 <p class="section-subtitle">We has advised and represented many foreign multi-national corporations, key industry players in Vietnam and prominent individuals. </br>
-                We prides ourselves as a professional firm that provides top-notch legal advice and excellent service. It strives to uphold its tagline, "Legal Solutions Made Simple" to all its clients.</p>
+                </br>We prides ourselves as a professional firm that provides top-notch legal advice and excellent service. It strives to uphold its tagline, "Legal Solutions Made Simple" to all its clients.</p>
             </div>
 
             <div class="col-right">
@@ -55,15 +55,18 @@
                         <p>your IP</p>
                     </li>
                 </ul>
-                <button><a href="contact.html">receive consultation</a></button>
+                <button class="consultation-btn"><a href="contact.html">receive consultation</a></button>
             </div>
 
         </section>
 
         <section class="client-choose-us main-grid">
             <div class="col-left">
-                <h2 class="section-title">Why clients choose us</h2>
-                <p class="section-subtitle">We know clients have got a lot of options to choose from. Why they chose THB Consulting?</p>
+                <div class="top-content">
+                    <h2 class="section-title">Why clients choose us</h2>
+                    <p class="section-subtitle">We know clients have got a lot of options to choose from. Why they chose THB Consulting?</p>    
+                </div>
+                
                 <ol class="reasons-list">
                     <li class="reason-item">
                         <h3 class="reason">We deliver trust and value</h3>
@@ -83,11 +86,16 @@
                     </li>
                 </ol>
             </div>
-            <div class="col-right"><img src="img/expertise bg.jpg" alt="a happy client"></div>
+
+            <div class="col-right">
+                <img src="img/expertise bg.jpg" alt="a happy client">
+            </div>
         </section>
 
-        <section class="clients-talk">
-            <h2 class="section-title">Clients talk about us</h2>
+        <section class="clients-talk main-grid">
+            <div class="top-content">
+                <h2 class="section-title white-section-title">Clients talk about us</h2>
+            </div>
 
             <div class="client-one">
                 <div class="client-title">
@@ -112,6 +120,7 @@
             </div>
 
             <a href="#">more reviews</a>
+    
 
         </section>
 
