--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <p class="section-subtitle">We know clients have got a lot of options to choose from. Why they chose THB Consulting?</p>    
                 </div>
                 
-                <ol class="reasons-list">
+                <ul class="reasons-list">
                     <li class="reason-item">
                         <h3 class="reason">We deliver trust and value</h3>
                         <p>We guarantee realistic, honest advice that achieves results. </p>
@@ -84,7 +84,7 @@
                         <h3 class="reason">We are solution-focused</h3>
                         <p>We focus on being a responsive arm that our clients can lean on to relieve the pressure valve.</p>
                     </li>
-                </ol>
+                </ul>
             </div>
 
             <div class="col-right">
